--- a/english_school/index.html
+++ b/english_school/index.html
@@ -179,55 +179,50 @@
         <h3>Наши преподаватели</h3>
         <div class="wrapper-content jc-flex fwrap">
             <div class="teacher-item">
-                <div class="video"><iframe width="378" height="275" src="/img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Alyona_Kozlova">Alyona Kozlova</div>
                 <button class="button-more teachers-text">Подробнее</button>
             </div>
             <div class="teacher-item">
-                <div class="video"><iframe width="378" height="275" src="/img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Ekaterina_Ryabova">Ekaterina Ryabova</div>
                 <button class="button-more teachers-text">Подробнее</button>
             </div>
             <div class="teacher-item">
-                <div class="video"><iframe width="378" height="275" src="/img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Jerry_Orphe">Jerry Orphe</div>
                 <button class="button-more teachers-text">Подробнее</button>
             </div>
             <div class="teacher-item">
-                <div class="video"><iframe width="378" height="275" src="/img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Dasha_Krutkova">Dasha Krutkova</div>
                 <button class="button-more teachers-text">Подробнее</button>
             </div>
             <div class="teacher-item">
-                <div class="video"><iframe width="378" height="275" src="/img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Alyona_Chernomirdyna">Alyona Chernomirdyna</div>
                 <button class="button-more teachers-text">Подробнее</button>
             </div>
             <div class="teacher-item">
-                <div class="video"><iframe width="378" height="275" src="/img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Anastasia_Ovchinnikova">Anastasia Ovchinnikova</div>
                 <button class="button-more teachers-text">Подробнее</button>
             </div>
             <div class="teacher-item">
-                <div class="video"><iframe width="378" height="275" src="/img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Yulia_Klimasheva">Yulia Klimasheva</div>
                 <button class="button-more teachers-text">Подробнее</button>
             </div>
             <div class="teacher-item">
-                <div class="video"><iframe width="378" height="275" src="/img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Valeria_Azarova">Valeria Azarova</div>
                 <button class="button-more teachers-text">Подробнее</button>
             </div>
             <div class="teacher-item">
-                <div class="video"><iframe width="378" height="275" src="/img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Daria_Skachilkina">Daria Skachilkina</div>
                 <button class="button-more teachers-text">Подробнее</button>
             </div>
-            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint </p> -->
         </div>
     </section>
     <section class="why-we bg-orange"><a id="whywe"></a>
