--- a/english_school/index.html
+++ b/english_school/index.html
@@ -113,7 +113,7 @@
                         умений в чтении, письме и счёте на английском языке у Обучение говорению строится
                         на основе сюжетных историй,<br> сценок и песен,<br> делающих процесс <br> обучения английскому <br>
                         языку живым <br>и интересным. </p>
-                    <img src="/img/girafe1.png" class="wow bounceInLeft" style="position: absolute; top: 42%; left: 24%;">
+                    <img src="img/girafe1.png" class="wow bounceInLeft" style="position: absolute; top: 42%; left: 24%;">
                     <button class="button-more button-level level1">Подробнее</button>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                     <p class="text">Вдохновляющий курс, ориентированный на мотивацию и развитие  учащихся младшего подросткового возраста.
                         Курс отражает современные тенденции и требования к обучению практическому<br> владению английским <br>языком в повседневном <br>общении и включает<br>
                         в себя аутентичные видеоролики<br> BBC и<br> интерактивные <br>задания </p>
-                    <img src="/img/girafe2.png" class="wow bounceInRight" style="position: absolute;top: 49%; left: 62%;">
+                    <img src="img/girafe2.png" class="wow bounceInRight" style="position: absolute;top: 49%; left: 62%;">
                     <button class="button-more button-level level3">Подробнее</button>
                 </div>
             </div>
