--- a/test1/index.html
+++ b/test1/index.html
@@ -17,7 +17,7 @@
            <input type="range" min="0" max="15" value="14" step="1" id="frame-slider">
            <div class="range-target"><p>Target $15</p></div>
         </div>
-        <div><span id="output1"></span></div>
+        <div><span id="output1">1</span></div>
         <div class="flex">
             <img src="http://s1.iconbird.com/ico/0912/NX11Unfinished/w256h2561348757719Info.png" width="15" height="15" alt=""><p>You need $<span id="output">1</span>&nbsp;more to reach your target.</p>
         </div> 
