--- a/man1/index.html
+++ b/man1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,7 +42,6 @@
 				<input type="hidden" name="locale" value="ru" />
 				<input type="hidden" name="singleton" value="true" />
 				<input type="hidden" name="resultsURL" value="/ru/ru/technicalpages/search_result.jsp" />
-				<meta itemprop="target" content="https://www.truck.man.eu/ru/ru/x_site_structure_masters/site_search_microdata.html?q={query}"/>
 			</form>
         </ul>
             <div class="header-margin">
@@ -59,7 +58,6 @@
             <input type="hidden" name="locale" value="ru" />
             <input type="hidden" name="singleton" value="true" />
             <input type="hidden" name="resultsURL" value="/ru/ru/technicalpages/search_result.jsp" />
-            <meta itemprop="target" content="https://www.truck.man.eu/ru/ru/x_site_structure_masters/site_search_microdata.html?q={query}"/>
         </form>
         </div>  
             <img class="main-logo" width="145" height="82" src="img/logo.JPG" alt="">    
