--- a/man1/index.html
+++ b/man1/index.html
@@ -72,17 +72,14 @@
                         <div class="js_stage-image-carousel stage-image-carousel">
                             
                                 <a href="#">
-
-                                    <picture class="">
-                                        <!--[if IE 9]><video style="display:none;"><![endif]-->
-                                        <source srcset="img/sait_man.png__1200x434_q85_crop_subsampling-2_upscale.png,  2x" media="(min-width: 1200px)">
+<img src="img/main-photo.png" width="100%" alt="">
+                                    <!-- <picture class="">
+                                        <source srcset="img/main-photo.png,  2x" media="(min-width: 1200px)">
                                         <source srcset="img/sait_man.png__1200x434_q85_crop_subsampling-2_upscale.png, /media/filer_public_thumbnails/filer_public/96/19/96197864-3f29-44b2-9b5f-7e210a5ed7a6/sait_man.png__2048x741_q85_crop_subsampling-2_upscale.png 2x" media="(min-width: 1012px)">
                                         <source srcset="img/sait_man.png__1011x366_q85_crop_subsampling-2_upscale.png, /media/filer_public_thumbnails/filer_public/96/19/96197864-3f29-44b2-9b5f-7e210a5ed7a6/sait_man.png__1600x579_q85_crop_subsampling-2_upscale.png 2x" media="(min-width: 768px)">
                                         <source srcset="img/sait_man.png__767x278_q85_crop_subsampling-2_upscale.png, /media/filer_public_thumbnails/filer_public/96/19/96197864-3f29-44b2-9b5f-7e210a5ed7a6/sait_man.png__1500x543_q85_crop_subsampling-2_upscale.png 2x" media="(min-width: 480px)">
                                         <source srcset="img/sait_man.png__479x173_q85_crop_subsampling-2_upscale.png, /media/filer_public_thumbnails/filer_public/96/19/96197864-3f29-44b2-9b5f-7e210a5ed7a6/sait_man.png__958x347_q85_crop_subsampling-2_upscale.png 2x">
-                                        <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/1.jpg" alt="">
-                                    </picture>
+                                    </picture> -->
                                 </a>
                                 <a href="#"></a>
                         </div>
