--- a/man1/card-item.html
+++ b/man1/card-item.html
@@ -359,7 +359,7 @@
 
     <div class="row">
         <div class="col-md-12 footer-mandatory-container">
-            <span>© МАН Центр Уфа 2019</span>
+            <span>© МАН Центр Сибирь 2019</span>
             <div class="footer-mandatory-links">
                 <a href="/privacy/" class="link">Политика конфиденциальности</a>
                 <a href="javascript:window.print();" class="link" rel="noindex, follow">Распечатать страницу</a>
