--- a/man1/news-item.html
+++ b/man1/news-item.html
@@ -110,7 +110,7 @@
                 17 июня 2019
             </strong>
         </div>
-        <h1 itemprop="headline">ДЕНЬ ОТКРЫТЫХ ДВЕРЕЙ МАНЦЕНТРУФА</h1>
+        <h1 itemprop="headline">ДЕНЬ ОТКРЫТЫХ ДВЕРЕЙ МАНЦЕНТРСИБИРЬ</h1>
         <picture class="pic">
             <img src="img/vykhodnoi_den_12iiunia_man.png" alt="ДЕНЬ ОТКРЫТЫХ ДВЕРЕЙ МАНЦЕНТРУФА">
         </picture>
@@ -118,7 +118,7 @@
         
         <div itemprop="text">
             <div class="clear">
-                <p>7 июня состоялся ДЕНЬ ОТКРЫТЫХ ДВЕРЕЙ МАНЦЕНТРУФА!</p><p>Это было одно из ключевых событий, планируемых компанией в этом году.</p><p>Помимо официальных частей мероприятия - экскурсия по станции сервисного обслуживания и презентации грузовых автомобилей, клиенты получили техническую консультацию нашей профессиональной&nbsp;команды, могли в непринужденной обстановке пообщаться со всем составом компании МАНЦЕНТРУФА и&nbsp;задать интересующие вопросы!</p><p>Мы верим и надеемся, что данное мероприятие было полезным и значимым для каждого из Вас!</p><p>Каждый клиент на мероприятии получил подарок-комплимент от компании!</p><p>Помимо индивидуальных подарков, был проведен розыгрыш!</p><p>Телевизор PHILIPS диагональю 32 дюйма</p><p>Аудиосистема (саундбар) с отдельностоящим сабвуфером</p><p>Робот - пылесос</p><p>3 мощные и влагоустойчивые портативные колонки!</p><p>От лица коMANды МАНЦЕНТРУФА хотим выразить признание и благодарность всем нашим клиентам!</p><p>Спасибо, что в этот день, Вы были с нами!</p><p>&nbsp;</p>
+                <p>7 июня состоялся ДЕНЬ ОТКРЫТЫХ ДВЕРЕЙ МАНЦЕНТРСИБИРЬ!</p><p>Это было одно из ключевых событий, планируемых компанией в этом году.</p><p>Помимо официальных частей мероприятия - экскурсия по станции сервисного обслуживания и презентации грузовых автомобилей, клиенты получили техническую консультацию нашей профессиональной&nbsp;команды, могли в непринужденной обстановке пообщаться со всем составом компании МАНЦЕНТРУФА и&nbsp;задать интересующие вопросы!</p><p>Мы верим и надеемся, что данное мероприятие было полезным и значимым для каждого из Вас!</p><p>Каждый клиент на мероприятии получил подарок-комплимент от компании!</p><p>Помимо индивидуальных подарков, был проведен розыгрыш!</p><p>Телевизор PHILIPS диагональю 32 дюйма</p><p>Аудиосистема (саундбар) с отдельностоящим сабвуфером</p><p>Робот - пылесос</p><p>3 мощные и влагоустойчивые портативные колонки!</p><p>От лица коMANды МАНЦЕНТРУФА хотим выразить признание и благодарность всем нашим клиентам!</p><p>Спасибо, что в этот день, Вы были с нами!</p><p>&nbsp;</p>
             </div>
         </div>
     </article>
@@ -214,7 +214,7 @@
     <div class="caption editorial-content">
         <div class='h3'>Контакты</div>
         <br/>
-            <p class='fn org'>Отдел продаж ООО «МанЦентрУфа»</p>
+            <p class='fn org'>Отдел продаж ООО Сибирь</p>
             <span class='geo'>
                 <span class='latitude'><span class='value-title' title='54,735147'></span></span>
                 <span class='longitude'><span class='value-title' title='55,958727'></span></span>
@@ -294,7 +294,7 @@
 
             <div class="row">
                 <div class="col-md-12 footer-mandatory-container">
-                    <span>© МАН Центр Уфа 2019</span>
+                    <span>© МАН Центр Сибирь 2019</span>
                     <div class="footer-mandatory-links">
                         <a href="/privacy/" class="link">Политика конфиденциальности</a>
                         <a href="javascript:window.print();" class="link" rel="noindex, follow">Распечатать страницу</a>
