--- a/man1/index.html
+++ b/man1/index.html
@@ -38,18 +38,23 @@
                         <li><a href="#">Рейтинг TUV</a></li>
                     </ul></li>
                     <li class="sub-menu3"><a href="#">Строительство</a>
-                    <ul class="sub-menu1">
+                    <ul class="sub-menu1 sub-stroy">
                     <h4>Строительство</h4>
-                    <li class="sub-menu3"><a href="#">TGX</a></li>
+                    <li class="sub-menu3"><a href="#">TGX</a>
+                        <ul class="sub-menu4 sub-bus">
+                            <h4>TGX</h4>
+                            <li><a href="#">Обзор</a></li>
+                            <li><a href="#">Сервис</a></li>
+                            <li><a href="#">Технические разработки</a></li>
+                            <li><a href="#">Финансирование</a></li>
+                        </ul></li>
                     <li class="sub-menu3"><a href="#">TGS</a></li>
                     <li class="sub-menu3"><a href="#">TGM</a></li>
                     <li class="sub-menu3"><a href="#">TGL</a></li>
                     <li class="sub-menu3"><a href="#">TGS WW</a></li>
-                    <li><a href="#">Концепция автопоездов</a></li>
-                    <li><a href="#">Сравнение моделей</a></li>
                 </ul></li>
                 <li class="sub-menu3"><a href="#">Разовые перевозки</a>
-                    <ul class="sub-menu1">
+                    <ul class="sub-menu1 sub-perevoz">
                         <h4>Разовые перевозки</h4>
                         <li class="sub-menu3"><a href="#">TGS</a></li>
                         <li class="sub-menu3"><a href="#">TGM</a></li>
@@ -58,7 +63,7 @@
                         <li><a href="#">Коммунальная техника MAN</a></li>
                         </ul></li>
                 <li class="sub-menu3"><a href="#">Технологии и разработки</a>
-                    <ul class="sub-menu1">
+                    <ul class="sub-menu1 sub-technology">
                     <h4>Технологии и разработки</h4>
                     <li class="sub-menu3"><a href="#">Системы безопасности и помощи водителю</a></li>
                     <li class="sub-menu3"><a href="#">Системы повышения эффективности</a></li>
@@ -71,8 +76,23 @@
                 <div class="sub-menu-container bus-dropdown">
                 <ul class="sub-menu">
                     <h4>Автобусы</h4>
-                            <li class="sub-menu3"><a href="#">Туристические – MAN Lion's Coach</a></li>
-                            <li class="sub-menu3"><a href="#">Междугородние – MAN Lion's Intercity</a></li>
+                            <li class="sub-menu3"><a href="#">Туристические – MAN Lion's Coach</a>
+                                <ul class="sub-menu1 sub-bus">
+                                    <h4>Туристические – MAN Lion's Coach</h4>
+                                    <li><a href="#">Обзор</a></li>
+                                    <li><a href="#">Технические разработки</a></li>
+                                    <li><a href="#">Салон</a></li>
+                                    <li><a href="#">Место водителя</a></li>
+                                    <li><a href="#">Пакет MAN EfficientLine</a></li>
+                                    </ul></li>
+                            <li class="sub-menu3"><a href="#">Междугородние – MAN Lion's Intercity</a>
+                                <ul class="sub-menu1">
+                                    <h4>Междугородние – MAN Lion's Intercity</h4>
+                                    <li><a href="#">Обзор</a></li>
+                                    <li><a href="#">Highlights</a></li>
+                                    <li><a href="#">Пассажирский салон</a></li>
+                                    <li><a href="#">Место водителя</a></li>
+                                    </ul></li>
                         </ul>
                     </div></li>
             <li><a href="#">Сервис</a>
