--- a/man1/index.html
+++ b/man1/index.html
@@ -41,13 +41,13 @@
                     <ul class="sub-menu1 sub-stroy">
                     <h4>Строительство</h4>
                     <li class="sub-menu3"><a href="#">TGX</a>
-                        <ul class="sub-menu4 sub-bus">
+                        <!-- <ul class="sub-menu4 sub-bus">
                             <h4>TGX</h4>
                             <li><a href="#">Обзор</a></li>
                             <li><a href="#">Сервис</a></li>
                             <li><a href="#">Технические разработки</a></li>
                             <li><a href="#">Финансирование</a></li>
-                        </ul></li>
+                        </ul></li> -->
                     <li class="sub-menu3"><a href="#">TGS</a></li>
                     <li class="sub-menu3"><a href="#">TGM</a></li>
                     <li class="sub-menu3"><a href="#">TGL</a></li>
@@ -99,9 +99,9 @@
                 <div class="sub-menu-container service-dropdown">
                     <ul class="sub-menu">
                         <h4>Сервис</h4>
-                                <li class="sub-menu3"><a href="#">Ремонт грузовиков MAN</a></li>
-                                <li class="sub-menu3"><a href="#">Виды услуг</a></li>
-                                <li class="sub-menu3"><a href="#">Кузовной ремонт</a></li>
+                                <li><a href="#">Ремонт грузовиков MAN</a></li>
+                                <li><a href="#">Виды услуг</a></li>
+                                <li><a href="#">Кузовной ремонт</a></li>
                             </ul>
                         </div></li>
             <li><a href="#">Запчасти</a></li>
