--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <body>
       <div class="container">
             <div class="outline"></div>
-            <div class="logo">Smythe</div>
             <div class="menu">
                   <ion-icon name="menu"></ion-icon>
             </div>
@@ -29,23 +28,23 @@
                   <button>Open Up</button>
             </div>
       </div>
-      <div class="wines">
+      <div class="site">
             <div id="wrap">
-                  <a href="#" class="block">
+                  <a href="https://graf-andreev.github.io/english_school/" class="block">
                         <div class="product one">
-                              <img src="01.png" alt="">
+                              <img src="01.JPG" alt="">
                               <div class="txt">
-                                    <h1>Smythe Wheat</h1>
-                                    <p>Price : $40</p>
+                                    <h1>Лэндинг для школы английского Leven Eleven</h1>
+                                    <p>Жирафы, адатив, flexbox и анимации</p>
                                     <div class="add">
-                                          <button>BUY NOW</button>
+                                          <button>Смотреть на GitHub</button>
                                     </div>
                               </div>
                         </div>
                   </a>
                   <a href="#" class="block">
                         <div class="product two">
-                              <img src="02.png" alt="">
+                              <img src="02.JPG" alt="">
                               <div class="txt">
                                     <h1>Smythe Mixology</h1>
                                     <p>Price : $40</p>
@@ -137,7 +136,7 @@
             delay: 1.8
       });
 
-      t1.to(".wines", 1, {
+      t1.to(".site", 1, {
             autoAlpha: 1
       });
 
