--- a/man1/index.html
+++ b/man1/index.html
@@ -31,16 +31,16 @@
                 <li class="sub-menu3"><a href="#">Магистральные перевозки</a>
                     <ul class="sub-menu1">
                         <h4>Магистральные перевозки</h4>
-                        <li class="sub-menu3"><a href="#">TGX</a></li>
-                        <li class="sub-menu3"><a href="#">TGS</a></li>
-                        <li><a href="#">Концепция автопоездов</a></li>
-                        <li><a href="#">Сравнение моделей</a></li>
-                        <li><a href="#">Рейтинг TUV</a></li>
+                        <li class="menu-sub"><a href="#">TGX</a></li>
+                        <li class="menu-sub"><a href="#">TGS</a></li>
+                        <li class="menu-sub"><a href="#">Концепция автопоездов</a></li>
+                        <li class="menu-sub"><a href="#">Сравнение моделей</a></li>
+                        <li class="menu-sub"><a href="#">Рейтинг TUV</a></li>
                     </ul></li>
                     <li class="sub-menu3"><a href="#">Строительство</a>
                     <ul class="sub-menu1 sub-stroy">
                     <h4>Строительство</h4>
-                    <li class="sub-menu3"><a href="#">TGX</a>
+                    <li class="menu-sub"><a href="#">TGX</a>
                         <!-- <ul class="sub-menu4 sub-bus">
                             <h4>TGX</h4>
                             <li><a href="#">Обзор</a></li>
@@ -48,26 +48,26 @@
                             <li><a href="#">Технические разработки</a></li>
                             <li><a href="#">Финансирование</a></li>
                         </ul></li> -->
-                    <li class="sub-menu3"><a href="#">TGS</a></li>
-                    <li class="sub-menu3"><a href="#">TGM</a></li>
-                    <li class="sub-menu3"><a href="#">TGL</a></li>
-                    <li class="sub-menu3"><a href="#">TGS WW</a></li>
+                    <li class="menu-sub"><a href="#">TGS</a></li>
+                    <li class="menu-sub"><a href="#">TGM</a></li>
+                    <li class="menu-sub"><a href="#">TGL</a></li>
+                    <li class="menu-sub"><a href="#">TGS WW</a></li>
                 </ul></li>
                 <li class="sub-menu3"><a href="#">Разовые перевозки</a>
                     <ul class="sub-menu1 sub-perevoz">
                         <h4>Разовые перевозки</h4>
-                        <li class="sub-menu3"><a href="#">TGS</a></li>
-                        <li class="sub-menu3"><a href="#">TGM</a></li>
-                        <li class="sub-menu3"><a href="#">TGL</a></li>
-                        <li><a href="#">Лесовозные</a></li>
-                        <li><a href="#">Коммунальная техника MAN</a></li>
+                        <li class="menu-sub"><a href="#">TGS</a></li>
+                        <li class="menu-sub"><a href="#">TGM</a></li>
+                        <li class="menu-sub"><a href="#">TGL</a></li>
+                        <li class="menu-sub"><a href="#">Лесовозные</a></li>
+                        <li class="menu-sub"><a href="#">Коммунальная техника MAN</a></li>
                         </ul></li>
                 <li class="sub-menu3"><a href="#">Технологии и разработки</a>
                     <ul class="sub-menu1 sub-technology">
                     <h4>Технологии и разработки</h4>
-                    <li class="sub-menu3"><a href="#">Системы безопасности и помощи водителю</a></li>
-                    <li class="sub-menu3"><a href="#">Системы повышения эффективности</a></li>
-                    <li class="sub-menu3"><a href="#">Кабины</a></li>
+                    <li class="menu-sub"><a href="#">Системы безопасности и помощи водителю</a></li>
+                    <li class="menu-sub"><a href="#">Системы повышения эффективности</a></li>
+                    <li class="menu-sub"><a href="#">Кабины</a></li>
                     </ul></li>
             </ul>
         </div>
